<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.udacity.shoestore.welcome.WelcomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundColor"
        tools:context=".welcome.WelcomeFragment">

        <ImageView
            android:id="@+id/logoImage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="64dp"
            android:contentDescription="@string/description_logo_image"
            android:src="@drawable/ic_launcher_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/welcomeText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="@string/welcome"
            android:textAlignment="center"
            android:textColor="@color/textColorLight"
            android:textSize="47sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logoImage" />

        <TextView
            android:id="@+id/niceText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/nice_text"
            android:textAlignment="center"
            android:textColor="@color/textColorLight"
            android:textSize="23sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/welcomeText" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/next_instructions"
            android:textAlignment="center"
            android:textColor="@color/textColorLight"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/skipButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/skipButton"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="16dp"
            android:onClick="@{ () -> viewModel.skip() }"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:text="@string/skip"
            android:textAlignment="viewStart"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/nextButton"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/nextButton"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="16dp"
            android:onClick="@{() -> viewModel.next() }"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:text="@string/next"
            android:textAlignment="viewEnd"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/skipButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>