<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.udacity.shoestore.login.LoginViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:context=".login.LoginFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/backgroundColor"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logoImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="64dp"
                android:contentDescription="@string/description_logo_image"
                android:src="@drawable/ic_launcher_foreground"
                app:layout_constraintBottom_toTopOf="@id/credentialsCard"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/credentialsCard"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/login_card_background"
                android:orientation="vertical"
                android:padding="@dimen/default_margin">

                <TextView
                    android:id="@+id/loginText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:fontFamily="@font/roboto"
                    android:letterSpacing="0.1"
                    android:text="@string/login"
                    android:textAlignment="center"
                    android:textColor="@color/textColor"
                    android:textSize="32sp"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailInputLayout"
                    style="@style/LoginInputLayout"
                    android:hint="@string/email"
                    app:startIconDrawable="@drawable/account">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/emailEditText"
                        style="@style/LoginEditText"
                        android:inputType="textEmailAddress"
                        android:text="@={viewModel.email}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passwordInputLayout"
                    style="@style/LoginInputLayout"
                    android:hint="@string/password"
                    app:passwordToggleEnabled="true"
                    app:startIconDrawable="@drawable/password">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/passwordEditText"
                        style="@style/LoginEditText"
                        android:inputType="textPassword"
                        android:text="@={viewModel.password}" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="24dp"
                    android:onClick="@{() -> viewModel.login()}"
                    android:text="@string/login" />

                <TextView
                    android:id="@+id/signUpText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:layout_marginTop="48dp"
                    android:layout_marginBottom="8dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="@{() -> viewModel.signUp()}"
                    android:text="@string/signUpText"
                    android:textColor="@color/textColor"
                    android:textSize="16sp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</layout>