<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.udacity.shoestore.instructions.InstructionsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundColor"
        tools:context=".instructions.InstructionsFragment">

        <TextView
            android:id="@+id/instructionText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="@string/instructions"
            android:textAlignment="center"
            android:textColor="@color/textColorLight"
            android:textSize="47sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/instructionsText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="128dp"
            android:layout_marginEnd="32dp"
            android:text="@string/instructions_detail"
            android:textAlignment="viewStart"
            android:textColor="@color/textColorLight"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/instructionText" />

        <Button
            android:id="@+id/skipButton"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_marginTop="128dp"
            android:layout_height="wrap_content"
            android:onClick="@{ () -> viewModel.openShoeList() }"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:text="@string/continueButton"
            android:textAlignment="viewStart"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/instructionsText" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>